--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-header {
-  width: 100%;
-  height: auto;
-  background: #ddd;
-  text-align: center;
-  padding: 20px 0;
-}
+ol, ul {list-style: none;}
 
-section {
-  width: 100%;
-  height: auto;
-  padding: 30px 0;
-  background: cornflowerblue;
-  color: darkblue;
-  text-align: center;
-}
+.container{width: 100%; height: auto; display: flex; justify-content: center; padding: 50px;}
+.loader{width: 100%; height: 100vh; display: flex; align-items: center; justify-content: center;}
 
-section div{font-size: 20px;}
-
-footer{background: aliceblue; font-size: 40px;}
+.movies{width: 100%; height: auto; display: flex; flex-wrap: wrap; justify-content: center;}
+.movie{width: 100%; padding: 30px; border: 1px solid #333; display: flex; flex-wrap: wrap; margin-bottom: 30px; box-shadow: 5px 5px #fabc20;}
+.movie img{width: 10%; box-shadow: 5px 5px #fabc20; border: 1px solid #333;}
+.movie .movie_data{width: 90%; padding: 10px 50px;}
+.movie .movie_data .movie_title{font-size: 22px; margin-bottom: 20px; width: auto; transition: all 0.4s ease;} 
+.movie .movie_data .movie_title:hover{background: #fabc20;}
+.movie .movie_data ul{margin-bottom: 15px; display: flex;}
+.movie .movie_data li{font-size: 12px; padding-right: 3px;}
+.movie .movie_data p{width: 100%;}
